--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Terms of Use | PoolKings</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header><h1>Terms of Use</h1></header>
 
+<main>
+
+<p>These Terms of Use (“Terms”) govern your access to and use of PoolKings. By using the site, you agree to these Terms. If you do not agree, do not use the platform.</p>
+
+<h2>1. Eligibility</h2>
+<ul>
+  <li>You must be at least 18 years old.</li>
+  <li>You must reside in a jurisdiction where skill‑based contests are legal.</li>
+  <li>Employees of PoolKings and its affiliates may be restricted from entering certain contests.</li>
+</ul>
+
+<h2>2. Account Responsibilities</h2>
+<ul>
+  <li>You agree to provide accurate information.</li>
+  <li>You are responsible for maintaining the confidentiality of your account.</li>
+  <li>You must notify us of any unauthorized access.</li>
+</ul>
+
+<h2>3. Use of the Platform</h2>
+<p>You agree not to:</p>
+<ul>
+  <li>Manipulate contest outcomes</li>
+  <li>Use bots, scripts, or automated tools</li>
+  <li>Interfere with site operations</li>
+  <li>Upload harmful code or attempt to breach security</li>
+</ul>
+
+<h2>4. Contest Nature</h2>
+<p>All PoolKings contests are free, skill‑based prediction pools. No purchase is necessary to enter or win.</p>
+
+<h2>5. Intellectual Property</h2>
+<p>All content, branding, and code are owned by PoolKings or its licensors. You may not reproduce or distribute content without permission.</p>
+
+<h2>6. Disclaimers</h2>
+<p>The platform is provided “as is” without warranties of any kind. We do not guarantee uninterrupted access, error‑free operation, or accuracy of data.</p>
+
+<h2>7. Limitation of Liability</h2>
+<p>To the fullest extent permitted by law, PoolKings is not liable for:</p>
+<ul>
+  <li>Loss of data</li>
+  <li>Service interruptions</li>
+  <li>Errors in scoring or contest results</li>
+  <li>Indirect, incidental, or consequential damages</li>
+</ul>
+
+<h2>8. Termination</h2>
+<p>We may suspend or terminate accounts for violations of these Terms or suspicious activity.</p>
+
+<h2>9. Governing Law</h2>
+<p>These Terms are governed by the laws of Ontario, Canada.</p>
+
+<h2>10. Changes to Terms</h2>
+<p>We may update these Terms at any time. Continued use of the platform constitutes acceptance of the updated Terms.</p>
+
+</main>
+
+<footer>
+  <a href="index.html">Home</a> · <a href="privacy.html">Privacy</a> · <a href="rules.html">Official Rules</a>
+</footer>
+</body>
+</html>
