--- a/rules.html
+++ b/rules.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Official Contest Rules | PoolKings</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header><h1>Official Contest Rules</h1></header>
 
+<main>
+
+<p>These Official Rules (“Rules”) apply to all contests (“Pools”) offered by PoolKings. By entering any Pool, you agree to these Rules, the Terms of Use, and the Privacy Policy.</p>
+
+<h2>1. No Purchase Necessary</h2>
+<p>All Pools are free to enter. No purchase or payment is required to participate or win.</p>
+
+<h2>2. Eligibility</h2>
+<ul>
+  <li>Open to legal residents of Canada aged 18 or older.</li>
+  <li>Void where prohibited by law.</li>
+  <li>Employees of PoolKings may be restricted from entering certain Pools.</li>
+</ul>
+
+<h2>3. How to Enter</h2>
+<ul>
+  <li>Create a PoolKings account.</li>
+  <li>Select a Pool and submit your predictions before the posted deadline.</li>
+  <li>Only one entry per person per Pool unless otherwise stated.</li>
+</ul>
+
+<h2>4. Scoring & Determining Winners</h2>
+<ul>
+  <li>Each Pool uses a skill‑based scoring system based on prediction accuracy.</li>
+  <li>Scores are calculated using publicly available sports results.</li>
+  <li>In the event of a tie, PoolKings may use timestamp, additional criteria, or a skill‑testing question.</li>
+</ul>
+
+<h2>5. Skill‑Testing Question</h2>
+<p>To comply with Canadian contest law, potential winners must correctly answer a mathematical skill‑testing question without assistance.</p>
+
+<h2>6. Prizes</h2>
+<ul>
+  <li>Prizes are non‑transferable and may not be substituted.</li>
+  <li>Winners will be notified via email.</li>
+  <li>PoolKings may require identity verification before awarding prizes.</li>
+</ul>
+
+<h2>7. Disqualification</h2>
+<p>PoolKings may disqualify entries for:</p>
+<ul>
+  <li>Late submissions</li>
+  <li>Multiple entries</li>
+  <li>Use of bots or automated tools</li>
+  <li>Fraudulent or suspicious activity</li>
+</ul>
+
+<h2>8. Publicity</h2>
+<p>By entering, you consent to the use of your name and general location for promotional purposes without additional compensation.</p>
+
+<h2>9. Liability</h2>
+<p>PoolKings is not responsible for technical failures, data loss, or errors in scoring or results.</p>
+
+<h2>10. Governing Law</h2>
+<p>These Rules are governed by the laws of Ontario, Canada.</p>
+
+</main>
+
+<footer>
+  <a href="index.html">Home</a> · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+</footer>
+</body>
+</html>
