--- a/advertise.html
+++ b/advertise.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Advertise with PoolKings</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header><h1>Advertise with PoolKings</h1></header>
 
+<main>
+
+<section>
+  <h2>Reach a High‑Value Sports Audience</h2>
+  <p>PoolKings connects brands with one of the most engaged digital audiences: sports fans who actively participate in prediction pools and fantasy‑style contests.</p>
+</section>
+
+<section>
+  <h2>Audience Snapshot</h2>
+  <ul>
+    <li>69% male, 31% female</li>
+    <li>39% under age 35</li>
+    <li>44% earn over $100K annually</li>
+    <li>Fantasy users spend 3–5× more time on sports content than casual fans</li>
+    <li>Global fantasy sports market projected to reach $71B by 2030</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Ad Opportunities</h2>
+  <ul>
+    <li>Display ads (Google AdSense, Taboola)</li>
+    <li>Sponsored pools tied to major sports events</li>
+    <li>Branded leaderboards and results pages</li>
+    <li>Native placements beside picks and insights</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Partner With Us</h2>
+  <p>We work with advertisers, agencies, and media buyers targeting sports fans, fantasy players, and digital‑first consumers.</p>
+  <p><strong>Email:</strong> <a href="mailto:ads@poolkings.com">ads@poolkings.com</a></p>
+</section>
+
+</main>
+
+<footer>
+  <a href="index.html">Home</a> · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+</footer>
+</body>
+</html>
