--- a/pools.html
+++ b/pools.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>All Pools | PoolKings</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header class="site-header">
+  <div class="logo">POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="pools.html" class="active">Pools</a>
+    <a href="advertise.html">Advertise</a>
+    <a href="rules.html">Official Rules</a>
+  </nav>
+</header>
+
+<main class="main-content">
+  <section class="section">
+    <h2>Live & upcoming pools</h2>
+    <p>Browse free, skill-based pools. Click into a pool to make your picks and compete for prizes — no purchase necessary.</p>
+
+    <div class="ad-slot">
+      <!-- List page header ad block -->
+      Ad placement (leaderboard / native)
+    </div>
+
+    <div id="all-pools-list" class="pool-list">
+      <!-- Populated by js/main.js from pools.js -->
+    </div>
+
+    <div class="ad-slot">
+      <!-- Below-list ad block -->
+      Ad placement (responsive in-content / Taboola widget)
+    </div>
+  </section>
+</main>
+
+<footer class="site-footer">
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="rules.html">Official Rules</a>
+</footer>
+
+<script src="js/pools.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
 
