--- a/picks.html
+++ b/picks.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Make Your Picks | PoolKings</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header class="site-header">
+  <div class="logo">POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="pools.html">Pools</a>
+    <a href="advertise.html">Advertise</a>
+    <a href="rules.html">Official Rules</a>
+  </nav>
+</header>
+
+<main class="main-content">
+  <section class="section">
+    <div class="picks-layout">
+      <div>
+        <h2 id="pool-title">Make your picks</h2>
+        <p id="pool-meta" style="color:#9CA3AF; font-size:0.9rem;"></p>
+
+        <div class="ad-slot">
+          <!-- Above-picks ad slot -->
+          Ad placement (728x90 / 320x100)
+        </div>
+
+        <div id="picks-form">
+          <!-- Populated by js/picks.js using pools.js -->
+        </div>
+      </div>
+
+      <aside>
+        <div class="pick-summary">
+          <h3>Your selections</h3>
+          <div id="pick-summary-body"></div>
+          <div class="pick-submit">
+            <button id="submit-picks" class="btn-primary" type="button">Lock in my picks</button>
+            <p id="submit-status" style="font-size:0.85rem; color:#9CA3AF; margin-top:8px;"></p>
+          </div>
+        </div>
+
+        <div class="ad-slot" style="margin-top:24px;">
+          <!-- Sidebar / lower picks ad slot -->
+          Ad placement (300x250 / 300x600)
+        </div>
+      </aside>
+    </div>
+  </section>
+</main>
+
+<footer class="site-footer">
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="rules.html">Official Rules</a>
+</footer>
+
+<script src="js/pools.js"></script>
+<script src="js/picks.js"></script>
+</body>
+</html>
 
