--- a/picks.html
+++ b/picks.html
@@ -6,13 +6,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
 <header class="site-header">
-  <div class="logo">POOLKINGS</div>
+  <div class="logo">👑 POOLKINGS</div>
   <nav class="main-nav">
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="pools.html">Pools</a>
-    <a href="advertise.html">Advertise</a>
+    <a href="mypicks.html">My Picks</a>
+    <a href="leaderboard.html">Leaderboard</a>
     <a href="rules.html">Official Rules</a>
+    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
   </nav>
 </header>
 
@@ -24,7 +28,6 @@
         <p id="pool-meta" style="color:#9CA3AF; font-size:0.9rem;"></p>
 
         <div class="ad-slot">
-          <!-- Above-picks ad slot -->
           Ad placement (728x90 / 320x100)
         </div>
 
@@ -44,7 +47,6 @@
         </div>
 
         <div class="ad-slot" style="margin-top:24px;">
-          <!-- Sidebar / lower picks ad slot -->
           Ad placement (300x250 / 300x600)
         </div>
       </aside>
@@ -55,11 +57,24 @@
 <footer class="site-footer">
   <a href="privacy.html">Privacy</a> ·
   <a href="terms.html">Terms</a> ·
-  <a href="rules.html">Official Rules</a>
+  <a href="rules.html">Official Rules</a> ·
+  <a href="advertise.html">Advertise</a>
 </footer>
+
+<div id="signup-modal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Join PoolKings</h2>
+    <p>Enter your email to save picks and join pools.</p>
+    <input type="email" id="signup-email" placeholder="you@example.com">
+    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
+    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
+  </div>
+</div>
 
 <script src="js/pools.js"></script>
 <script src="js/picks.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
 
+      
