--- a/advertise.html
+++ b/advertise.html
@@ -6,46 +6,64 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header><h1>Advertise with PoolKings</h1></header>
 
-<main>
+<header class="site-header">
+  <div class="logo">👑 POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="pools.html">Pools</a>
+    <a href="mypicks.html">My Picks</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="rules.html">Official Rules</a>
+    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
+  </nav>
+</header>
 
-<section>
-  <h2>Reach a High‑Value Sports Audience</h2>
-  <p>PoolKings connects brands with one of the most engaged digital audiences: sports fans who actively participate in prediction pools and fantasy‑style contests.</p>
-</section>
+<main class="main-content legal-page">
+  <h1>Advertise with PoolKings</h1>
+  <p>Reach a premium, prediction-obsessed sports audience at the exact moment they’re most engaged.</p>
 
-<section>
-  <h2>Audience Snapshot</h2>
+  <h2>Who you reach</h2>
+  <p>PoolKings users behave like active investors in sports outcomes, not passive viewers. They compare odds, track stats, and return frequently to update and review their picks.</p>
   <ul>
-    <li>69% male, 31% female</li>
-    <li>39% under age 35</li>
-    <li>44% earn over $100K annually</li>
-    <li>Fantasy users spend 3–5× more time on sports content than casual fans</li>
-    <li>Global fantasy sports market projected to reach $71B by 2030</li>
+    <li>Demographics: 69% male, 31% female; 39% under age 35</li>
+    <li>Income: 44% earn over $100K annually</li>
+    <li>Engagement: fantasy and prediction users spend 3–5× more time on sports content than casual fans</li>
+    <li>Market: global fantasy sports market projected to reach $71B by 2030</li>
   </ul>
-</section>
 
-<section>
-  <h2>Ad Opportunities</h2>
+  <h2>Ad opportunities</h2>
   <ul>
-    <li>Display ads (Google AdSense, Taboola)</li>
-    <li>Sponsored pools tied to major sports events</li>
-    <li>Branded leaderboards and results pages</li>
-    <li>Native placements beside picks and insights</li>
+    <li>Display: IAB-standard units across pool listings, picks pages, and results views (ideal for Google AdSense and Taboola)</li>
+    <li>Sponsored pools: brand-specific pools tied to major events with custom naming and prize integration</li>
+    <li>Branded leaderboards: attach your brand to high-intent, high-attention leaderboard views</li>
+    <li>Native placements: contextual promotions positioned beside picks, insights, and results recaps</li>
   </ul>
-</section>
 
-<section>
-  <h2>Partner With Us</h2>
-  <p>We work with advertisers, agencies, and media buyers targeting sports fans, fantasy players, and digital‑first consumers.</p>
+  <h2>Partner with us</h2>
+  <p>We work with advertisers, agencies, and media buyers who want measurable reach into sports fans, fantasy players, and digital-first consumers.</p>
   <p><strong>Email:</strong> <a href="mailto:ads@poolkings.com">ads@poolkings.com</a></p>
-</section>
-
 </main>
 
-<footer>
-  <a href="index.html">Home</a> · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+<footer class="site-footer">
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="rules.html">Official Rules</a> ·
+  <a href="advertise.html">Advertise</a>
 </footer>
+
+<div id="signup-modal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Join PoolKings</h2>
+    <p>Enter your email to save picks and join pools.</p>
+    <input type="email" id="signup-email" placeholder="you@example.com">
+    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
+    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
+  </div>
+</div>
+
+<script src="js/main.js"></script>
 </body>
 </html>
+
