--- a/privacy.html
+++ b/privacy.html
@@ -6,91 +6,118 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header><h1>Privacy Policy</h1></header>
 
-<main>
-<p>Effective Date: January 2026</p>
+<header class="site-header">
+  <div class="logo">👑 POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="pools.html">Pools</a>
+    <a href="mypicks.html">My Picks</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="rules.html">Official Rules</a>
+    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
+  </nav>
+</header>
 
-<p>PoolKings (“we”, “our”, “us”) operates a free, skill‑based sports prediction platform. We are committed to protecting your privacy and handling your personal information responsibly. This Privacy Policy explains what information we collect, how we use it, how we protect it, and the rights available to you.</p>
+<main class="main-content legal-page">
+  <h1>Privacy Policy</h1>
+  <p>Effective Date: January 2026</p>
 
-<h2>1. Information We Collect</h2>
+  <p>PoolKings (“we”, “our”, “us”) operates a free, skill-based sports prediction platform. We are committed to protecting your privacy and handling your personal information responsibly. This Privacy Policy explains what information we collect, how we use it, how we protect it, and the rights available to you.</p>
 
-<h3>1.1 Information You Provide</h3>
-<ul>
-  <li>Email address (required for account creation, pool entry, and winner notifications)</li>
-  <li>Username or display name</li>
-  <li>Optional demographic information (if provided voluntarily)</li>
-</ul>
+  <h2>1. Information We Collect</h2>
 
-<h3>1.2 Automatically Collected Information</h3>
-<ul>
-  <li>IP address and approximate geolocation</li>
-  <li>Device type, browser type, operating system</li>
-  <li>Pages visited, time spent, referral sources</li>
-  <li>Interaction data with ads and content</li>
-</ul>
+  <h3>1.1 Information You Provide</h3>
+  <ul>
+    <li>Email address (required for account creation, pool entry, and winner notifications)</li>
+    <li>Username or display name</li>
+    <li>Optional demographic information (if provided voluntarily)</li>
+  </ul>
 
-<h3>1.3 Cookies & Tracking Technologies</h3>
-<p>We use cookies, pixels, and similar technologies for:</p>
-<ul>
-  <li>Authentication and session management</li>
-  <li>Analytics and performance measurement</li>
-  <li>Advertising personalization and frequency capping</li>
-</ul>
+  <h3>1.2 Automatically Collected Information</h3>
+  <ul>
+    <li>IP address and approximate geolocation</li>
+    <li>Device type, browser type, operating system</li>
+    <li>Pages visited, time spent, referral sources</li>
+    <li>Interaction data with ads and content</li>
+  </ul>
 
-<p>Third‑party ad partners (e.g., Google AdSense, Taboola) may also use cookies to deliver relevant ads and measure performance.</p>
+  <h3>1.3 Cookies & Tracking Technologies</h3>
+  <p>We use cookies, pixels, and similar technologies for:</p>
+  <ul>
+    <li>Authentication and session management</li>
+    <li>Analytics and performance measurement</li>
+    <li>Advertising personalization and frequency capping</li>
+  </ul>
+  <p>Third-party ad partners (e.g., Google AdSense, Taboola) may also use cookies to deliver relevant ads and measure performance.</p>
 
-<h2>2. How We Use Your Information</h2>
-<ul>
-  <li>To operate and administer free skill‑based pools</li>
-  <li>To verify eligibility and contact winners</li>
-  <li>To personalize user experience</li>
-  <li>To serve and optimize advertising</li>
-  <li>To detect fraud, abuse, or unauthorized activity</li>
-  <li>To comply with legal obligations</li>
-</ul>
+  <h2>2. How We Use Your Information</h2>
+  <ul>
+    <li>To operate and administer free skill-based pools</li>
+    <li>To verify eligibility and contact winners</li>
+    <li>To personalize user experience</li>
+    <li>To serve and optimize advertising</li>
+    <li>To detect fraud, abuse, or unauthorized activity</li>
+    <li>To comply with legal obligations</li>
+  </ul>
 
-<h2>3. Sharing of Information</h2>
-<p>We do not sell your personal information. We may share limited data with:</p>
-<ul>
-  <li>Advertising partners (for ad delivery and measurement)</li>
-  <li>Analytics providers (aggregated, anonymized data)</li>
-  <li>Service providers assisting with hosting, security, or email delivery</li>
-  <li>Regulators or law enforcement when legally required</li>
-</ul>
+  <h2>3. Sharing of Information</h2>
+  <p>We do not sell your personal information. We may share limited data with:</p>
+  <ul>
+    <li>Advertising partners (for ad delivery and measurement)</li>
+    <li>Analytics providers (aggregated, anonymized data)</li>
+    <li>Service providers assisting with hosting, security, or email delivery</li>
+    <li>Regulators or law enforcement when legally required</li>
+  </ul>
 
-<h2>4. Advertising & Third‑Party Tracking</h2>
-<p>PoolKings uses third‑party ad networks that may collect anonymized data to deliver personalized ads. These partners may use cookies, device identifiers, and browsing data.</p>
+  <h2>4. Advertising & Third-Party Tracking</h2>
+  <p>PoolKings uses third-party ad networks that may collect anonymized data to deliver personalized ads. These partners may use cookies, device identifiers, and browsing data.</p>
 
-<p>You may opt out of personalized advertising through your browser settings or via the Digital Advertising Alliance.</p>
+  <p>You may opt out of personalized advertising through your browser settings or via the Digital Advertising Alliance where available.</p>
 
-<h2>5. Data Security</h2>
-<p>We implement administrative, technical, and physical safeguards to protect your information. However, no online system is completely secure.</p>
+  <h2>5. Data Security</h2>
+  <p>We implement administrative, technical, and physical safeguards to protect your information. However, no online system is completely secure.</p>
 
-<h2>6. Data Retention</h2>
-<p>We retain personal information only as long as necessary to operate the platform, comply with legal requirements, and maintain accurate contest records.</p>
+  <h2>6. Data Retention</h2>
+  <p>We retain personal information only as long as necessary to operate the platform, comply with legal requirements, and maintain accurate contest records.</p>
 
-<h2>7. Your Rights</h2>
-<p>Depending on your jurisdiction, you may have rights to:</p>
-<ul>
-  <li>Access your personal information</li>
-  <li>Request correction or deletion</li>
-  <li>Withdraw consent for marketing or tracking</li>
-  <li>Request a copy of your data</li>
-</ul>
+  <h2>7. Your Rights</h2>
+  <p>Depending on your jurisdiction, you may have rights to:</p>
+  <ul>
+    <li>Access your personal information</li>
+    <li>Request correction or deletion</li>
+    <li>Withdraw consent for marketing or tracking</li>
+    <li>Request a copy of your data</li>
+  </ul>
 
-<p>Contact: <a href="mailto:privacy@poolkings.com">privacy@poolkings.com</a></p>
+  <p>Contact: <a href="mailto:privacy@poolkings.com">privacy@poolkings.com</a></p>
 
-<h2>8. International Compliance</h2>
-<p>PoolKings complies with PIPEDA (Canada), GDPR (EU), and CCPA (California) where applicable.</p>
+  <h2>8. International Compliance</h2>
+  <p>PoolKings aims to comply with PIPEDA (Canada), GDPR (EU), and CCPA (California) where applicable.</p>
 
-<h2>9. Changes to This Policy</h2>
-<p>We may update this Privacy Policy periodically. Continued use of the platform constitutes acceptance of the updated policy.</p>
-
+  <h2>9. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy periodically. Continued use of the platform constitutes acceptance of the updated policy.</p>
 </main>
 
-<footer>
-  <a href="index.html">Home</a> · <a href="terms.html">Terms</a> · <a href="rules.html">Official Rules</a>
+<footer class="site-footer">
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="rules.html">Official Rules</a> ·
+  <a href="advertise.html">Advertise</a>
 </footer>
+
+<div id="signup-modal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Join PoolKings</h2>
+    <p>Enter your email to save picks and join pools.</p>
+    <input type="email" id="signup-email" placeholder="you@example.com">
+    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
+    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
+  </div>
+</div>
+
+<script src="js/main.js"></script>
 </body>
 </html>
+
