--- a/rules.html
+++ b/rules.html
@@ -6,68 +6,95 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header><h1>Official Contest Rules</h1></header>
 
-<main>
+<header class="site-header">
+  <div class="logo">👑 POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="pools.html">Pools</a>
+    <a href="mypicks.html">My Picks</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="rules.html" class="active">Official Rules</a>
+    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
+  </nav>
+</header>
 
-<p>These Official Rules (“Rules”) apply to all contests (“Pools”) offered by PoolKings. By entering any Pool, you agree to these Rules, the Terms of Use, and the Privacy Policy.</p>
+<main class="main-content legal-page">
+  <h1>Official Contest Rules</h1>
+  <p>These Official Rules (“Rules”) apply to all contests (“Pools”) offered by PoolKings. By entering any Pool, you agree to these Rules, the Terms of Use, and the Privacy Policy.</p>
 
-<h2>1. No Purchase Necessary</h2>
-<p>All Pools are free to enter. No purchase or payment is required to participate or win.</p>
+  <h2>1. No Purchase Necessary</h2>
+  <p>All Pools are free to enter. No purchase or payment is required to participate or win.</p>
 
-<h2>2. Eligibility</h2>
-<ul>
-  <li>Open to legal residents of Canada aged 18 or older.</li>
-  <li>Void where prohibited by law.</li>
-  <li>Employees of PoolKings may be restricted from entering certain Pools.</li>
-</ul>
+  <h2>2. Eligibility</h2>
+  <ul>
+    <li>Open to legal residents of Canada aged 18 or older.</li>
+    <li>Void where prohibited by law.</li>
+    <li>Employees of PoolKings may be restricted from entering certain Pools.</li>
+  </ul>
 
-<h2>3. How to Enter</h2>
-<ul>
-  <li>Create a PoolKings account.</li>
-  <li>Select a Pool and submit your predictions before the posted deadline.</li>
-  <li>Only one entry per person per Pool unless otherwise stated.</li>
-</ul>
+  <h2>3. How to Enter</h2>
+  <ul>
+    <li>Create a PoolKings account (email registration).</li>
+    <li>Select a Pool and submit your predictions before the posted deadline.</li>
+    <li>Only one entry per person per Pool unless otherwise stated.</li>
+  </ul>
 
-<h2>4. Scoring & Determining Winners</h2>
-<ul>
-  <li>Each Pool uses a skill‑based scoring system based on prediction accuracy.</li>
-  <li>Scores are calculated using publicly available sports results.</li>
-  <li>In the event of a tie, PoolKings may use timestamp, additional criteria, or a skill‑testing question.</li>
-</ul>
+  <h2>4. Scoring & Determining Winners</h2>
+  <ul>
+    <li>Each Pool uses a skill-based scoring system based on prediction accuracy.</li>
+    <li>Scores are calculated using publicly available sports results.</li>
+    <li>In the event of a tie, PoolKings may use timestamp, additional criteria, or a skill-testing question.</li>
+  </ul>
 
-<h2>5. Skill‑Testing Question</h2>
-<p>To comply with Canadian contest law, potential winners must correctly answer a mathematical skill‑testing question without assistance.</p>
+  <h2>5. Skill-Testing Question</h2>
+  <p>To comply with Canadian contest laws, potential winners must correctly answer a mathematical skill-testing question without assistance.</p>
 
-<h2>6. Prizes</h2>
-<ul>
-  <li>Prizes are non‑transferable and may not be substituted.</li>
-  <li>Winners will be notified via email.</li>
-  <li>PoolKings may require identity verification before awarding prizes.</li>
-</ul>
+  <h2>6. Prizes</h2>
+  <ul>
+    <li>Prizes are non-transferable and may not be substituted, except at the discretion of PoolKings.</li>
+    <li>Winners will be notified via email.</li>
+    <li>PoolKings may require identity verification before awarding prizes.</li>
+  </ul>
 
-<h2>7. Disqualification</h2>
-<p>PoolKings may disqualify entries for:</p>
-<ul>
-  <li>Late submissions</li>
-  <li>Multiple entries</li>
-  <li>Use of bots or automated tools</li>
-  <li>Fraudulent or suspicious activity</li>
-</ul>
+  <h2>7. Disqualification</h2>
+  <p>PoolKings may disqualify entries for:</p>
+  <ul>
+    <li>Late submissions</li>
+    <li>Multiple entries where only one is allowed</li>
+    <li>Use of bots or automated tools</li>
+    <li>Fraudulent or suspicious activity</li>
+  </ul>
 
-<h2>8. Publicity</h2>
-<p>By entering, you consent to the use of your name and general location for promotional purposes without additional compensation.</p>
+  <h2>8. Publicity</h2>
+  <p>By entering, you consent to the use of your name and general location for promotional purposes without additional compensation, where permitted by law.</p>
 
-<h2>9. Liability</h2>
-<p>PoolKings is not responsible for technical failures, data loss, or errors in scoring or results.</p>
+  <h2>9. Liability</h2>
+  <p>PoolKings is not responsible for technical failures, data loss, or errors in scoring or results. All decisions by PoolKings regarding eligibility, scoring, and awarding of prizes are final.</p>
 
-<h2>10. Governing Law</h2>
-<p>These Rules are governed by the laws of Ontario, Canada.</p>
-
+  <h2>10. Governing Law</h2>
+  <p>These Rules are governed by the laws of Ontario, Canada, without regard to conflicts of law principles.</p>
 </main>
 
-<footer>
-  <a href="index.html">Home</a> · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+<footer class="site-footer">
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="rules.html">Official Rules</a> ·
+  <a href="advertise.html">Advertise</a>
 </footer>
+
+<div id="signup-modal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Join PoolKings</h2>
+    <p>Enter your email to save picks and join pools.</p>
+    <input type="email" id="signup-email" placeholder="you@example.com">
+    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
+    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
+  </div>
+</div>
+
+<script src="js/main.js"></script>
 </body>
 </html>
+
