--- a/pools.html
+++ b/pools.html
@@ -1,62 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>All Pools | PoolKings</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PoolKings – Pool</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
-<header class="site-header">
-  <div class="logo">👑 POOLKINGS</div>
-  <nav class="main-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="pools.html" class="active">Pools</a>
-    <a href="mypicks.html">My Picks</a>
-    <a href="leaderboard.html">Leaderboard</a>
-    <a href="rules.html">Official Rules</a>
-    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
-  </nav>
-</header>
+  <!-- ===== Site Header ===== -->
+  <header class="site-header">
+    <div class="logo">PoolKings</div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="pools.html" class="active">Pools</a>
+      <a href="mypicks.html">My Picks</a>
+      <a href="leaderboard.html">Leaderboard</a>
+    </nav>
+  </header>
 
-<main class="main-content">
-  <section class="section">
-    <h2>Live & upcoming pools</h2>
-    <p>Browse free, skill-based pools. Click into a pool to make your picks and compete for prizes — no purchase necessary.</p>
+  <!-- ===== Main Content ===== -->
+  <main class="main-content">
 
-    <div class="ad-slot">
-      Ad placement (leaderboard / native)
+    <div id="pool-wrapper">
+
+      <h1 id="pool-title"></h1>
+      <p id="pool-meta"></p>
+
+      <!-- Dynamic game rows will be injected here -->
+      <div id="games-slate"></div>
+
+      <div id="submit-status" class="pick-summary-row"></div>
+      <button id="submit-pool-picks" class="sticky-submit">Submit all picks</button>
+
     </div>
 
-    <div id="all-pools-list" class="pool-list">
-      <!-- Populated by js/main.js from pools.js -->
-    </div>
+  </main>
 
-    <div class="ad-slot">
-      Ad placement (responsive in-content / Taboola widget)
-    </div>
-  </section>
-</main>
+  <!-- ===== Footer ===== -->
+  <footer class="site-footer">
+    © 2026 PoolKings. All rights reserved.
+  </footer>
 
-<footer class="site-footer">
-  <a href="privacy.html">Privacy</a> ·
-  <a href="terms.html">Terms</a> ·
-  <a href="rules.html">Official Rules</a> ·
-  <a href="advertise.html">Advertise</a>
-</footer>
+  <!-- ===== Scripts ===== -->
+  <script src="js/pools.js"></script>
+  <script src="js/pool-multi.js"></script>
 
-<div id="signup-modal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Join PoolKings</h2>
-    <p>Enter your email to save picks and join pools.</p>
-    <input type="email" id="signup-email" placeholder="you@example.com">
-    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
-    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
-  </div>
-</div>
-
-<script src="js/pools.js"></script>
-<script src="js/main.js"></script>
 </body>
 </html>
