--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="main-nav">
     <a href="index.html" class="active">Home</a>
     <a href="about.html">About</a>
-    <a href="pools.html">Pools</a>
+    <a href="pools-list.html">Pools</a>
     <a href="mypicks.html">My Picks</a>
     <a href="leaderboard.html">Leaderboard</a>
     <a href="rules.html">Official Rules</a>
@@ -31,7 +31,7 @@
         skill-based alternative to gambling apps.
       </p>
       <div class="btn-row">
-        <a href="pools.html" class="btn-primary">View live pools</a>
+        <a href="pools-list.html" class="btn-primary">View live pools</a>
         <a href="about.html" class="btn-secondary">Learn how it works</a>
       </div>
     </div>
@@ -71,7 +71,7 @@
       <!-- Populated by js/main.js from pools.js -->
     </div>
     <div style="margin-top:16px;">
-      <a href="pools.html" class="btn-secondary">View all pools</a>
+      <a href="pools-list.html" class="btn-secondary">View all pools</a>
     </div>
   </section>
 
@@ -104,3 +104,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
