--- a/terms.html
+++ b/terms.html
@@ -12,13 +12,14 @@
   <nav class="main-nav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="pools.html">Pools</a>
+    <a href="pools-list.html">Pools</a>
     <a href="mypicks.html">My Picks</a>
     <a href="leaderboard.html">Leaderboard</a>
     <a href="rules.html">Official Rules</a>
     <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
   </nav>
 </header>
+
 
 <main class="main-content legal-page">
   <h1>Terms of Use</h1>
