--- a/pools.html
+++ b/pools.html
@@ -10,15 +10,16 @@
 <body>
 
   <!-- ===== Site Header ===== -->
-  <header class="site-header">
-    <div class="logo">PoolKings</div>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="pools.html" class="active">Pools</a>
-      <a href="mypicks.html">My Picks</a>
-      <a href="leaderboard.html">Leaderboard</a>
-    </nav>
-  </header>
+<header class="site-header">
+  <div class="logo">👑 POOLKINGS</div>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="pools-list.html" class="active">Pools</a>
+    <a href="mypicks.html">My Picks</a>
+    <a href="leaderboard.html">Leaderboard</a>
+  </nav>
+</header>
+
 
   <!-- ===== Main Content ===== -->
   <main class="main-content">
