--- a/index.html
+++ b/index.html
@@ -1,106 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>PoolKings | Free Skill-Based Sports Pools</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PoolKings – Free Sports Pools</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 <header class="site-header">
-  <div class="logo">👑 POOLKINGS</div>
-  <nav class="main-nav">
-    <a href="index.html" class="active">Home</a>
-    <a href="about.html">About</a>
-    <a href="pools-list.html">Pools</a>
-    <a href="mypicks.html">My Picks</a>
-    <a href="leaderboard.html">Leaderboard</a>
-    <a href="rules.html">Official Rules</a>
-    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
-  </nav>
+    <div class="header-left">
+        <div class="logo">
+            POOLKIN<span class="crown">👑</span>GS
+        </div>
+    </div>
+
+    <nav class="main-nav">
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html">Pools</a>
+        <a href="my-picks.html">My Picks</a>
+        <a href="leaderboard.html">Leaderboard</a>
+        <a href="rules.html">Official Rules</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
 </header>
 
-<main class="main-content">
+<div class="main-content">
 
-  <section class="hero">
-    <div class="hero-main">
-      <div class="badge">Free · Skill-Based · No Purchase Necessary</div>
-      <h1>Make your picks. Climb the leaderboard. Rule the pool.</h1>
-      <p>
-        PoolKings exists to make sports prediction fun, free, and accessible to everyone — giving fans a fair, 
-        skill-based alternative to gambling apps.
-      </p>
-      <div class="btn-row">
-        <a href="pools-list.html" class="btn-primary">View live pools</a>
-        <a href="about.html" class="btn-secondary">Learn how it works</a>
-      </div>
+    <h1>Welcome to PoolKings</h1>
+    <p>The free, skill‑based sports prediction platform for fans who want to compete, win, and track their picks.</p>
+
+    <div class="btn-row">
+        <a href="pools-list.html" class="btn-primary">View Pools</a>
+        <a href="about.html" class="btn-secondary">Learn More</a>
     </div>
-    <div class="hero-card">
-      <h3>Tonight’s featured pool</h3>
-      <div id="featured-pool">
-        <!-- Populated by js/main.js from pools.js -->
-      </div>
-      <div class="ad-slot">
-        Ad placement (728x90 / 320x100)
-      </div>
-    </div>
-  </section>
 
-  <section class="section">
-    <h2>How PoolKings works</h2>
-    <div class="section-grid">
-      <div class="card">
-        <h3>1. Pick a pool</h3>
-        <p>Browse live pools across major leagues and events. Each pool shows markets like winner, totals, and first to score.</p>
-      </div>
-      <div class="card">
-        <h3>2. Make your selections</h3>
-        <p>Lock in your picks before the deadline. Your score is based purely on prediction accuracy — no randomness, no betting.</p>
-      </div>
-      <div class="card">
-        <h3>3. Track results</h3>
-        <p>Follow real-world outcomes, see how your picks stack up, and climb the leaderboard as games go final.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
-    <h2>Live & upcoming pools</h2>
-    <p>Here’s a sample of what’s live right now. Dive into the full list to see every pool you can join.</p>
-    <div id="home-pool-list" class="pool-list">
-      <!-- Populated by js/main.js from pools.js -->
-    </div>
-    <div style="margin-top:16px;">
-      <a href="pools-list.html" class="btn-secondary">View all pools</a>
-    </div>
-  </section>
-
-  <section class="section">
-    <div class="ad-slot">
-      Ad placement (responsive in-content / Taboola widget)
-    </div>
-  </section>
-
-</main>
-
-<footer class="site-footer">
-  <a href="privacy.html">Privacy</a> ·
-  <a href="terms.html">Terms</a> ·
-  <a href="rules.html">Official Rules</a> ·
-  <a href="advertise.html">Advertise</a>
-</footer>
-
-<div id="signup-modal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Join PoolKings</h2>
-    <p>Enter your email to save picks and join pools.</p>
-    <input type="email" id="signup-email" placeholder="you@example.com">
-    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
-    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
-  </div>
 </div>
 
-<script src="js/pools.js"></script>
-<script src="js/main.js"></script>
+<footer class="site-footer">
+    <a href="terms.html">Terms</a> •
+    <a href="privacy.html">Privacy</a> •
+    <a href="rules.html">Official Rules</a>
+    <br />
+    © 2026 PoolKings. All rights reserved.
+</footer>
+
 </body>
 </html>
+
