--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PoolKings – Free Sports Pools</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>PoolKings – Home</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header class="site-header">
     <div class="header-left">
         <div class="logo">
@@ -20,25 +21,26 @@
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="pools-list.html">Pools</a>
-        <a href="my-picks.html">My Picks</a>
+        <a href="mypicks.html">My Picks</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="rules.html">Official Rules</a>
         <a href="signup.html">Sign Up</a>
     </nav>
 </header>
 
+<!-- MAIN CONTENT -->
 <div class="main-content">
 
     <h1>Welcome to PoolKings</h1>
-    <p>The free, skill‑based sports prediction platform for fans who want to compete, win, and track their picks.</p>
+    <p>The free, skill‑based sports prediction platform.</p>
 
-    <div class="btn-row">
-        <a href="pools-list.html" class="btn-primary">View Pools</a>
-        <a href="about.html" class="btn-secondary">Learn More</a>
-    </div>
+    <p>Make picks. Track performance. Join pools across your favorite sports.</p>
+
+    <a href="pools-list.html" class="pool-card-button">View Pools</a>
 
 </div>
 
+<!-- FOOTER -->
 <footer class="site-footer">
     <a href="terms.html">Terms</a> •
     <a href="privacy.html">Privacy</a> •
@@ -49,4 +51,3 @@
 
 </body>
 </html>
-
