--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About – PoolKings</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header class="site-header">
     <div class="header-left">
         <div class="logo">
@@ -20,22 +21,31 @@
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="pools-list.html">Pools</a>
-        <a href="my-picks.html">My Picks</a>
+        <a href="mypicks.html">My Picks</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="rules.html">Official Rules</a>
         <a href="signup.html">Sign Up</a>
     </nav>
 </header>
 
+<!-- MAIN CONTENT -->
 <div class="main-content">
 
     <h1>About PoolKings</h1>
-    <p>PoolKings is a free, skill‑based sports prediction platform built for fans who want a clean, modern, sportsbook‑grade experience without the complexity of betting.</p>
 
-    <p>Make picks. Track performance. Compete with friends. All free.</p>
+    <p>
+        PoolKings is a free, skill‑based sports prediction platform designed for fans who want
+        a clean, modern, and competitive experience without the complexity of betting.
+    </p>
+
+    <p>
+        Make picks, join pools, track your performance, and compete with friends across your
+        favorite sports — all for free.
+    </p>
 
 </div>
 
+<!-- FOOTER -->
 <footer class="site-footer">
     <a href="terms.html">Terms</a> •
     <a href="privacy.html">Privacy</a> •
